[package]
name = "variant-note"
version = "0.1.0"
authors = ["Sam Berning <bernings@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
elf = "0.7"
memmap2 = "0.9"
snafu = "0.8"
