[package]
name = "settings-plugin-aws-dev"
version = "0.1.0"
authors = ["Sam Berning <bernings@amazon.com>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
publish = false

[lib]
crate-type = ["cdylib"]
name = "settings"

[dependencies]
abi_stable = "0.11.3"
serde = "1.0.198"
serde_json = "1.0.116"
modeled-types = { path = "../../models/modeled-types", version = "0.1" }
models = { path = "../../models", version = "0.1" }

# settings extensions
settings-extension-aws = { path = "../../settings-extensions/aws", version = "0.1" }
settings-extension-container-registry = { path = "../../settings-extensions/container-registry", version = "0.1" }
settings-extension-kernel = { path = "../../settings-extensions/kernel", version = "0.1" }
settings-extension-motd = { path = "../../settings-extensions/motd", version = "0.1" }
settings-extension-ntp = { path = "../../settings-extensions/ntp", version = "0.1" }
settings-extension-updates = { path = "../../settings-extensions/updates", version = "0.1" }

# settings plugins
[dependencies.bottlerocket-settings-plugin]
git = "https://github.com/sam-berning/bottlerocket-settings-sdk"
branch = "settings-plugins"
version = "0.1.0"

[dependencies.bottlerocket-settings-derive]
git = "https://github.com/sam-berning/bottlerocket-settings-sdk"
branch = "settings-plugins"
version = "0.1.0"
